fixed buggs with scrolling out of screen and centered title

--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -11,6 +11,7 @@
   justify-content: space-evenly;
   padding-top: 10px;
   text-align: center;
+  width: 100%;
   max-height: 1583;
 }
 
